oauth2-proxy/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://ad904c01c5cc9475e85a33e79fb7085a-843788484.eu-west-1.elb.amazonaws.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://ad904c01c5cc9475e85a33e79fb7085a-843788484.eu-west-1.elb.amazonaws.com/oauth2/start?rd=$request_uri"
spec:
  ingressClassName: nginx
  rules:
    - host: a6d28e0f6077b4787a7dd5985ab1c316-231441080.eu-west-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-release-flask-app
                port:
                  number: 5000
